--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,12 +4,10 @@
 <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
+	<script src="main.js"></script>
 <div id="bd">
 <h2>Let's Watch Some Movies!</h2>
 	{{{ body }}}
-<footer>
-	<a href="/movies">View Movies</a> | <a href="/movies/create">Add a Movie</a>
-</footer>
 </div>
 </body>
 </head>
