--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,7 +1,9 @@
-<form action="" method="get">
-	Director: <input type="text" id="director" name="director" value="{{director}}">	
-	<input id="filterBtn" type="submit" value="Filter">
-</form>
+<br>
+<div id = "file">
+	Director: <input type="text" id="director" name="director" value="{{director}}">
+	<input id="filterBtn" type="button" onclick = "applyFilter()" value="Filter">
+</div>
+	<br>
 
 {{#if director}}
 <p>
@@ -15,12 +17,15 @@ Showing only movies directed by: <span class="highlight">{{director}}</span>
 		<th>Year</th>
 	</thead>
 	<tbody id="movie-list">
-		{{#each movies}}
-		<tr>
-			<td>{{title}}</td> 
-			<td>{{director}}</td> 
-			<td>{{year}}</td> 
-		</tr>
-		{{/each}}
 	</tbody>
 </table>
+<div>
+	<br>
+	<label for="movieTitle">Title:</label>
+	<input type="text" name="movieTitle" id="movieTitle">
+	<label for="movieDirector">Director:</label>
+	<input type="text" name="movieDirector" id="movieDirector">
+	<label for="movieYear">Year:</label>
+	<input type="text" name="movieYear" id="movieYear">
+	<br>
+<input type="button" onclick = "createNew()"name="addBtn" id="addBtn" value="Add Movie">
